chore: update spring boot 2.7.18 -> spring boot 3.0.13
1. java ee -> jakarta ee
2. elasticsearch 7.17.15 -> 8.5.3
3. spring boot 2.7.18 -> 3.0.13

BREAKING CHANGE:
1. query includeLower is no longer supported
2. document type is no longer supported

Signed-off-by: Dely <dph5199278@163.com>